--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
@@ -44,6 +45,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "prisma": "^4.16.2"
+    "prisma": "^5.0.0"
   }
 }
