--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.29.1",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
