--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@clerk/nextjs": "^4.29.1",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
@@ -37,6 +39,7 @@
     "tailwindcss": "3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
