--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "usehooks-ts": "^2.9.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "prisma": "^5.7.1"
